--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,18 @@ a {
   text-decoration: none !important;
 }
 
+.app {
+  padding: 0 !important;
+}
+
+.container {
+  padding: 0 !important;
+}
+
+.row {
+  margin: 0 !important;
+}
+
 .light {
   --clr-wb: #ffffff;
   --clr-bw: #000000;
