--- a/src/Components/PlanTypes/PlanTypes.css
+++ b/src/Components/PlanTypes/PlanTypes.css
@@ -28,11 +28,9 @@
   color: #fff;
 }
 .premiumText {
-  position: absolute;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
-  font-size: 7rem;
+  position: relative;
+  font-size: 3.8rem;
+  top: 3rem;
   color: transparent;
   -webkit-text-stroke: 1px rgba(255, 255, 255, 0.6);
 }
